test/testdata/classes/methods/init/missing_4_args_error.lox
class Foo {
  init(a, b, c, d) {
    print a + b + c + d;
  }
}

Foo(); // error: Foo.init() accepts 4 arguments but 0 were given
